environments/dev/istio/retry.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-retry
spec:
  hosts:
    - product.dev.svc.cluster.local
  http:
    - route:
        - destination:
            host: product.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,reset,connect-failure,retriable-4xx
      timeout: 10s
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cart-retry
spec:
  hosts:
    - cart.dev.svc.cluster.local
  http:
    - route:
        - destination:
            host: cart.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,reset,connect-failure,retriable-4xx
      timeout: 10s
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order-retry
spec:
  hosts:
    - order.dev.svc.cluster.local
  http:
    - route:
        - destination:
            host: order.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,reset,connect-failure,retriable-4xx
      timeout: 10s
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tax-retry
spec:
  hosts:
    - tax.dev.svc.cluster.local
  http:
    - route:
        - destination:
            host: tax.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,reset,connect-failure,retriable-4xx
      timeout: 10s
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: payment-retry
spec:
  hosts:
    - payment.dev.svc.cluster.local
  http:
    - route:
        - destination:
            host: payment.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,reset,connect-failure,retriable-4xx
      timeout: 10s
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: inventory-retry
spec:
  hosts:
    - inventory.dev.svc.cluster.local
  http:
    - route:
        - destination:
            host: inventory.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,reset,connect-failure,retriable-4xx
      timeout: 10s
