environments/dev/istio/authorization.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-storefront-ui
spec:
  selector:
    matchLabels:
      app: storefront-ui
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - dev
              - istio-system
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-storefront-bff
spec:
  selector:
    matchLabels:
      app: storefront-bff
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - dev
              - istio-system
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-backoffice-ui
spec:
  selector:
    matchLabels:
      app: backoffice-ui
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - dev
              - istio-system
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-backoffice-bff
spec:
  selector:
    matchLabels:
      app: backoffice-bff
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - dev
              - istio-system
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-swagger-ui
spec:
  selector:
    matchLabels:
      app: swagger-ui
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - dev
              - istio-system
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-product
spec:
  selector:
    matchLabels:
      app: product
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/storefront-bff
              - cluster.local/ns/dev/sa/backoffice-bff
              - cluster.local/ns/dev/sa/cart
              - cluster.local/ns/dev/sa/order
              - cluster.local/ns/dev/sa/inventory
              - cluster.local/ns/dev/sa/search
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-media
spec:
  selector:
    matchLabels:
      app: media
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/storefront-bff
              - cluster.local/ns/dev/sa/backoffice-bff
              - cluster.local/ns/dev/sa/product
              - cluster.local/ns/dev/sa/payment
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-cart
spec:
  selector:
    matchLabels:
      app: cart
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/storefront-bff
              - cluster.local/ns/dev/sa/order
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-order
spec:
  selector:
    matchLabels:
      app: order
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/storefront-bff
              - cluster.local/ns/dev/sa/backoffice-bff
              - cluster.local/ns/dev/sa/payment
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-customer
spec:
  selector:
    matchLabels:
      app: customer
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/storefront-bff
              - cluster.local/ns/dev/sa/backoffice-bff
              - cluster.local/ns/dev/sa/order
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-tax
spec:
  selector:
    matchLabels:
      app: tax
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/storefront-bff
              - cluster.local/ns/dev/sa/backoffice-bff
              - cluster.local/ns/dev/sa/cart
              - cluster.local/ns/dev/sa/order
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-payment
spec:
  selector:
    matchLabels:
      app: payment
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/storefront-bff
              - cluster.local/ns/dev/sa/backoffice-bff
              - cluster.local/ns/dev/sa/order
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-inventory
spec:
  selector:
    matchLabels:
      app: inventory
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/backoffice-bff
              - cluster.local/ns/dev/sa/order
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-search
spec:
  selector:
    matchLabels:
      app: search
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/storefront-bff
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-sampledata
spec:
  selector:
    matchLabels:
      app: sampledata
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/dev/sa/storefront-bff
              - cluster.local/ns/dev/sa/backoffice-bff
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-keycloak
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - dev
              - developer-build
    - from:
        - source:
            namespaces:
              - istio-system
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-postgres
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - dev
              - developer-build
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-redis
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - dev
              - developer-build
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-kafka
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kafka
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - dev
              - developer-build
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-elasticsearch
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: elasticsearch
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - dev
              - developer-build
